--- a/.github/workflows/check-in.yml
+++ b/.github/workflows/check-in.yml
@@ -11,8 +11,13 @@ on:
 
   # -- 3 Feb 2023
   # changed to "10 0 * * 1-5" from "20 0 * * 1-5" expecting will run at around 08:30 (previously around 08:56)
+
+  # -- 24 Feb 2023
+  # changed to multi cron schedule
   schedule:
-    - cron: "10 0 * * 1-5"
+    - cron: "5 0 * * 1,5"
+    - cron: "8 0 * * 2,3"
+    - cron: "10 0 * * 4"
   workflow_dispatch:
 
 jobs:
