--- a/.github/workflows/check-out.yml
+++ b/.github/workflows/check-out.yml
@@ -5,8 +5,12 @@ on:
 
   # changed to "0 11 * * 1-5" from "30 10 * * 1-5" expecting will run at around 18:00 (previously around 17:30)
 
+  # -- 24 Feb 2023
+  # changed to multi cron schedule
   schedule:
-    - cron: "0 11 * * 1-5"
+    - cron: "0 11 * * 1,5"
+    - cron: "3 11 * * 2,3"
+    - cron: "7 11 * * 4"
   workflow_dispatch:
 
 jobs:
